Correction valeur z-index

--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -101,7 +101,7 @@ a {
 .filtre-loader {
     height: 100vh;
     inset: 0px;
-    z-index: 0;
+    z-index: 1;
     opacity: 0.9;
     animation: fadeOut 3s forwards;
 }
